bug 145577: scrollHeight/scrollTop not supported on textareas r=jkeiser sr=jst